# binance-data-downloader

./: .gitignore  CLAUDE.md  GEMENI.md  README.md  bn_downloader.py  config.toml  converter.py  package-lock.json  package.json  pyproject.toml  requirements.txt  test.ipynb
src/: cli.py  converter.py
src/bn_converter/: conv.py  main.py  schemas.py
src/bn_downloader/: converter.py  main.py  source.py
