[project]
name = "crypto-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "requests>=2.32.5",
    "toml>=0.10.2",
    "tqdm>=4.67.1",
    "typer>=0.17.3",
]
[project.scripts]
bn-downloader = "bn_downloader:app"

[tool.uv]
package = true