[project]
name = "BinanceDataDownloader"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "requests>=2.32.5",
    "toml>=0.10.2",
    "tqdm>=4.67.1",
    "typer>=0.17.3",
    "polars>=1.20.0",
    "pyarrow>=15.0.0",
]

[project.scripts]
bn= "cli:app"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "pandas>=2.3.2",
]
